data/all_generated_tests/raw_wast_tests/br_table_IncorrectBranchTargetResolution_2064.wast
;; 4. **Test Description:** Employ the `br_table` instruction to branch backward into a loop, verifying that the operand stack state is correctly managed and matched against the loop’s entry requirements.    - **Constraint Checked:** Correct stack management and operand type matching for backward branches.    - **Relation to Incorrect Branch Target Resolution:** Incorrect stack state could cause invalid branches.

(assert_invalid
  (module
    (func $test_backwards_branch
      (loop (result i32)
        (i32.const 0) 
        (br_table 0 (i32.const 1))
      )
      (i32.eqz) (drop)
    )
  )
  "type mismatch"
)